This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Resource Leak
Type: resource usage Stage: resolved
Components: Extension Modules, Library (Lib) Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: serhiy.storchaka Nosy List: benjamin.peterson, pankaj.s01, python-dev, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2015-07-24 04:42 by pankaj.s01, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
Python-2.7.10_bsddb.patch pankaj.s01, 2015-07-24 04:42 Python-2.7.10_bsddb patches
Messages (4)
msg247249 - (view) Author: Pankaj Sharma (pankaj.s01) * Date: 2015-07-24 04:42
Hi,
There is an issue of resource leak of file descriptor "outFile" in Python-2.7.10 ,file :Python-2.7.10/Modules/_bsddb.c:3456.
variable "outFile" is going out of scope which leaks the storage.So need to close file before return on error.
I have attached the patch ,please check and review it.

thanks!
msg247254 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-07-24 04:59
Spaces should be used instead tabs for indenting.
msg247255 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2015-07-24 05:04
Otherwise the patch LGTM.
msg247256 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2015-07-24 05:06
New changeset 4fc7b803ac00 by Serhiy Storchaka in branch '2.7':
Issue #24703: Fixed resource leak on error in bsddb.verify().
https://hg.python.org/cpython/rev/4fc7b803ac00
History
Date User Action Args
2022-04-11 14:58:19adminsetgithub: 68891
2015-07-24 05:06:44serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: commit review -> resolved
2015-07-24 05:06:19python-devsetnosy: + python-dev
messages: + msg247256
2015-07-24 05:04:07serhiy.storchakasetassignee: serhiy.storchaka
messages: + msg247255
stage: patch review -> commit review
2015-07-24 04:59:53serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg247254

type: resource usage
stage: patch review
2015-07-24 04:42:36pankaj.s01create