Issue #24703: Fixed resource leak on error in bsddb.verify(). Original patch by Pankaj Sharma.